--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <div></div>
         <div></div>
     </main>
+    <script type='text/javascript' src='app.js'></script>
 </body>
 </html>
