add project divs

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jennifer's Portfolio</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
 </head>
 <body>
     <main>
-        <div class=div-narrow>
+        <div class=bio>
             <h1>Hi, I'm Jennifer!</h1>
             <p>I’m a fullstack developer in Boulder, CO. 
                 I do JavaScript, Node.js, and React, to name a few. 
@@ -18,11 +19,21 @@
                 Always, always, always learning.
             </p>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class='div div-large'>
+            <h2>Wikispeaks</h2>
+        </div>
+        <div class='div div-large'>
+            <h2>Gallery</h2>
+        </div>
+        <div class='div div-large'>
+            <h2>Referred</h2>
+        </div>
+        <div class='div div-med'>
+            <h2>Silicon Valley, The Quiz</h2>
+        </div>
+        <div class='div div-small'>
+            <h2>Emoji</h2>
+        </div>
     </main>
     <script type='text/javascript' src='app.js'></script>
 </body>
