add contact links

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Jennifer's Portfolio</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
+    <link href='styles.css' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Niramit' rel='stylesheet'>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 </head>
 <body>
     <main>
@@ -16,8 +17,13 @@
                 I do JavaScript, Node.js, and React, to name a few. 
                 I like creative solutions to complex problems and inspired implementations for everyday tools. 
                 I’m relentlessly curious, continuously improving, and I strive to be a good steward for all users. 
-                Always, always, always learning.
+                Forever learning.
             </p>
+            <span class=icon-span>
+                <a href='https://github.com/jennifer' target=blank><i class='fab fa-github'></i></a>
+                <a href='https://www.linkedin.com/in/kerssen/' target='blank'><i class='fab fa-linkedin'></i></a>
+                <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click'></i></a>
+            </span>
         </div>
         <div class='div div-large'>
             <h2>Wikispeaks</h2>
@@ -35,6 +41,6 @@
             <h2>Emoji</h2>
         </div>
     </main>
-    <script type='text/javascript' src='app.js'></script>
+    <script type='text/javascript' src='scripts.js'></script>
 </body>
 </html>
