add images and site styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class=bio>
             <h1>Hi, I'm Jennifer!</h1>
-            <p>I’m a fullstack developer in Boulder, CO. 
+            <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
                 I do JavaScript, Node.js, and React, to name a few. 
                 I like creative solutions to complex problems and inspired implementations for everyday tools. 
                 I’m relentlessly curious, continuously improving, and I strive to be a good steward for all users. 
@@ -25,20 +25,110 @@
                 <a href='mailto:jjkerssen@gmail.com'><i class='far fa-envelope icon-click'></i></a>
             </span>
         </div>
-        <div class='div div-large'>
-            <h2>Wikispeaks</h2>
+        <div class='div div-wiki'>
+            <span class=project-span>
+                <h2><a href='https://wikispeaks.herokuapp.com/' target=blank>Wikispeaks</a></h2><a href='https://github.com/jennifer/wikispeaks' target=blank class='icon-github gh-wiki'><i class='fab fa-github'></i></a>
+            </span>
+            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+                <div class='each-website'>
+                    <img src="https://i.imgur.com/QmAGZhq.png" class='website-image' alt='screenshot of website'/>
+                    <div class='overlay'>
+                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <span class=icon-span>
+                            <a><i class="fab fa-js"></i></a>
+                            <a><i class="fab fa-html5"></i></a>
+                            <a><i class="fab fa-css3-alt"></i></a>
+                            <a><i class="fab fa-aws"></i></a>
+                        </span>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class='div div-large'>
-            <h2>Gallery</h2>
+        <div class='div div-gal'>
+            <span class=project-span>
+                <h2><a href='https://website-gallery.herokuapp.com/' target=blank>Gallery</a></h2><a href='https://github.com/jennifer/gallery' target=blank class='icon-github gh-gal'><i class='fab fa-github'></i></a>
+            </span>
+            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+                <div class='each-website'>
+                    <img src="https://i.imgur.com/sct6tEh.jpg" class='website-image' alt='screenshot of website'/>
+                    <div class='overlay'>
+                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <span class=icon-span>
+                            <a><i class="fab fa-js"></i></a>
+                            <a><i class="fab fa-html5"></i></a>
+                            <a><i class="fab fa-css3-alt"></i></a>
+                            <a><i class="fab fa-aws"></i></a>
+                        </span>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class='div div-large'>
-            <h2>Referred</h2>
+        <div class='div div-ref'>
+            <span class=project-span>
+                <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class='icon-github gh-ref'><i class='fab fa-github'></i></a>
+            </span>
+            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+                <div class='each-website'>
+                    <img src="https://i.imgur.com/JY1LZPT.jpg" class='website-image' alt='screenshot of website'/>
+                    <div class='overlay'>
+                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <span class=icon-span>
+                            <a><i class="fab fa-js"></i></a>
+                            <a><i class="fab fa-html5"></i></a>
+                            <a><i class="fab fa-css3-alt"></i></a>
+                            <a><i class="fab fa-aws"></i></a>
+                        </span>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class='div div-med'>
-            <h2>Silicon Valley, The Quiz</h2>
+        <div class='div div-sv'>
+            <span class=project-span>
+                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>Silicon Valley, The Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github gh-sv'><i class='fab fa-github'></i></a>
+            </span>
+            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+                <div class='each-website'>
+                    <img src="https://i.imgur.com/8QNScfP.png" class='website-image' alt='screenshot of website'/>
+                    <div class='overlay'>
+                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <span class=icon-span>
+                            <a><i class="fab fa-js"></i></a>
+                            <a><i class="fab fa-html5"></i></a>
+                            <a><i class="fab fa-css3-alt"></i></a>
+                            <a><i class="fab fa-aws"></i></a>
+                        </span>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class='div div-small'>
-            <h2>Emoji</h2>
+        <div class='div div-pic'>
+            <span class=project-span>
+                <h2><a href='https://github.com/jennifer' target=blank><img src='./images/hello.png' class=hello></a></h2><a href='https://github.com/jennifer' target=blank class='icon-github gh-pic'><i class='fab fa-github'></i></a>
+            </span>
+            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+                <div class='each-website'>
+                    <img src="https://i.imgur.com/dsNvNIK.jpg" class='website-image' alt='screenshot of website'/>
+                    <div class='overlay'>
+                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <span class=icon-span>
+                            <a><i class="fab fa-js"></i></a>
+                            <a><i class="fab fa-html5"></i></a>
+                            <a><i class="fab fa-css3-alt"></i></a>
+                            <a><i class="fab fa-aws"></i></a>
+                        </span>
+                    </div>
+                </div>
+            </a>
         </div>
     </main>
     <script type='text/javascript' src='scripts.js'></script>
