--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
                 </div>
             </a>
         </div>
+        <div class='div div-sv'>
+            <span class=project-span>
+                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>Silicon Valley Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github gh-sv'><i class='fab fa-github'></i></a>
+            </span>
+            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+                <div class='each-website'>
+                    <img src="https://i.imgur.com/ygFRfKp.png?1" class='website-image' alt='screenshot of website'/>
+                    <div class='overlay'>
+                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
+                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <span class=icon-span>
+                            <a><i class="fab fa-js"></i></a>
+                            <a><i class="fab fa-html5"></i></a>
+                            <a><i class="fab fa-css3-alt"></i></a>
+                            <a><i class="fab fa-aws"></i></a>
+                        </span>
+                    </div>
+                </div>
+            </a>
+        </div>
         <div class='div div-ref'>
             <span class=project-span>
                 <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class='icon-github gh-ref'><i class='fab fa-github'></i></a>
@@ -88,44 +109,25 @@
                 </div>
             </a>
         </div>
-        <div class='div div-sv'>
-            <span class=project-span>
-                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>Silicon Valley, The Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github gh-sv'><i class='fab fa-github'></i></a>
-            </span>
-            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+        <div class='div div-res'>
+            <a href='https://drive.google.com/file/d/1Og3-9QOkGxIOgBcxNK7bueYIMSZ2nvxR/view?usp=sharing' target=blank>
+                <span class=project-span>
+                    <h2>Resume</h2>
+                </span>
                 <div class='each-website'>
-                    <img src="https://i.imgur.com/8QNScfP.png" class='website-image' alt='screenshot of website'/>
-                    <div class='overlay'>
-                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
-                        <span class=icon-span>
-                            <a><i class="fab fa-js"></i></a>
-                            <a><i class="fab fa-html5"></i></a>
-                            <a><i class="fab fa-css3-alt"></i></a>
-                            <a><i class="fab fa-aws"></i></a>
-                        </span>
-                    </div>
+                    <img src="https://i.imgur.com/SIYs9jN.png?1" class='website-image' alt="Jennifer's resume"/>
                 </div>
             </a>
         </div>
         <div class='div div-pic'>
             <span class=project-span>
-                <h2><a href='https://github.com/jennifer' target=blank><img src='./images/hello.png' class=hello></a></h2><a href='https://github.com/jennifer' target=blank class='icon-github gh-pic'><i class='fab fa-github'></i></a>
+                <a href='https://github.com/jennifer' target=blank class='icon-github gh-pic'><i class='fab fa-github'></i></a>
             </span>
             <a href='https://wikispeaks.herokuapp.com/' target=blank>
                 <div class='each-website'>
-                    <img src="https://i.imgur.com/dsNvNIK.jpg" class='website-image' alt='screenshot of website'/>
+                    <img src="https://i.imgur.com/dsNvNIK.jpg?3" class='website-image' alt='screenshot of website'/>
                     <div class='overlay'>
-                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
-                        <span class=icon-span>
-                            <a><i class="fab fa-js"></i></a>
-                            <a><i class="fab fa-html5"></i></a>
-                            <a><i class="fab fa-css3-alt"></i></a>
-                            <a><i class="fab fa-aws"></i></a>
-                        </span>
+                            <img src='./images/hello.png' class=hello>
                     </div>
                 </div>
             </a>
