place project cards and fix mouse trails

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
                         <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js"></i></a>
-                            <a><i class="fab fa-html5"></i></a>
-                            <a><i class="fab fa-css3-alt"></i></a>
-                            <a><i class="fab fa-aws"></i></a>
+                            <a><i class="fab fa-js icon-tech"></i></a>
+                            <a><i class="fab fa-html5 icon-tech"></i></a>
+                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
+                            <a><i class="fab fa-aws icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -58,10 +58,10 @@
                         <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
                         <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js"></i></a>
-                            <a><i class="fab fa-html5"></i></a>
-                            <a><i class="fab fa-css3-alt"></i></a>
-                            <a><i class="fab fa-aws"></i></a>
+                            <a><i class="fab fa-js icon-tech"></i></a>
+                            <a><i class="fab fa-html5 icon-tech"></i></a>
+                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
+                            <a><i class="fab fa-aws icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
         </div>
         <div class='div div-sv'>
             <span class=project-span>
-                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>Silicon Valley Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github gh-sv'><i class='fab fa-github'></i></a>
+                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>Silicon Valley, The Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github gh-sv'><i class='fab fa-github'></i></a>
             </span>
             <a href='https://wikispeaks.herokuapp.com/' target=blank>
                 <div class='each-website'>
@@ -79,10 +79,10 @@
                         <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
                         <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js"></i></a>
-                            <a><i class="fab fa-html5"></i></a>
-                            <a><i class="fab fa-css3-alt"></i></a>
-                            <a><i class="fab fa-aws"></i></a>
+                            <a><i class="fab fa-js icon-tech"></i></a>
+                            <a><i class="fab fa-html5 icon-tech"></i></a>
+                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
+                            <a><i class="fab fa-aws icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -100,10 +100,10 @@
                         <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
                         <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js"></i></a>
-                            <a><i class="fab fa-html5"></i></a>
-                            <a><i class="fab fa-css3-alt"></i></a>
-                            <a><i class="fab fa-aws"></i></a>
+                            <a><i class="fab fa-js icon-tech"></i></a>
+                            <a><i class="fab fa-html5 icon-tech"></i></a>
+                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
+                            <a><i class="fab fa-aws icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <h2>Resume</h2>
                 </span>
                 <div class='each-website'>
-                    <img src="https://i.imgur.com/SIYs9jN.png?1" class='website-image' alt="Jennifer's resume"/>
+                    <img src="https://i.imgur.com/SIYs9jN.png?2" class='website-image' alt="Jennifer's resume"/>
                 </div>
             </a>
         </div>
@@ -123,12 +123,9 @@
             <span class=project-span>
                 <a href='https://github.com/jennifer' target=blank class='icon-github gh-pic'><i class='fab fa-github'></i></a>
             </span>
-            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+            <a href='https://github.com/jennifer' target=blank>
                 <div class='each-website'>
-                    <img src="https://i.imgur.com/dsNvNIK.jpg?3" class='website-image' alt='screenshot of website'/>
-                    <div class='overlay'>
-                            <img src='./images/hello.png' class=hello>
-                    </div>
+                    <img src="https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png" class='website-image' alt='screenshot of website'/>
                 </div>
             </a>
         </div>
