--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class='div div-wiki'>
             <span class=project-span>
-                <h2><a href='https://wikispeaks.herokuapp.com/' target=blank>Wikispeaks</a></h2><a href='https://github.com/jennifer/wikispeaks' target=blank class='icon-github gh-wiki'><i class='fab fa-github'></i></a>
+                <h2><a href='https://wikispeaks.herokuapp.com/' class='card-title' target=blank>Wikispeaks</a></h2><a href='https://github.com/jennifer/wikispeaks' target=blank class='icon-github'><i class='fab fa-github'></i></a>
             </span>
             <a href='https://wikispeaks.herokuapp.com/' target=blank>
                 <div class='each-website'>
@@ -37,10 +37,11 @@
                         <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
                         <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js icon-tech"></i></a>
-                            <a><i class="fab fa-html5 icon-tech"></i></a>
-                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
-                            <a><i class="fab fa-aws icon-tech"></i></a>
+                            <a><i title='JavaScript' class="fab fa-js icon-tech"></i></a>
+                            <a><i title='Node.js' class="fab fa-node-js icon-tech"></i></a>
+                            <a><i title='HTML5' class="fab fa-html5 icon-tech"></i></a>
+                            <a><i title='CSS3' class="fab fa-css3-alt icon-tech"></i></a>
+                            <a><i title='Amazon Polly' class="fab fa-aws icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -48,20 +49,20 @@
         </div>
         <div class='div div-gal'>
             <span class=project-span>
-                <h2><a href='https://website-gallery.herokuapp.com/' target=blank>Gallery</a></h2><a href='https://github.com/jennifer/gallery' target=blank class='icon-github gh-gal'><i class='fab fa-github'></i></a>
+                <h2><a href='https://website-gallery.herokuapp.com/' class='card-title' target=blank>Gallery</a></h2><a href='https://github.com/jennifer/gallery' target=blank class='icon-github'><i class='fab fa-github'></i></a>
             </span>
-            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+            <a href='https://website-gallery.herokuapp.com/' target=blank>
                 <div class='each-website'>
                     <img src="https://i.imgur.com/sct6tEh.jpg" class='website-image' alt='screenshot of website'/>
                     <div class='overlay'>
-                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <p class=line-margin-bottom>A fullstack app that lets users collect, tag, and filter websites for design inspiration.</p>
+                        <p class=line-margin-bottom>Utilizes Webshot and Cloudinary to automatically take a screenshot and display it in an image gallery.</p>
+                        <p class=line-margin-bottom>Uses Node.js for backend CRUD operations, and CSS Grid and Flexbox for responsive layout.</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js icon-tech"></i></a>
-                            <a><i class="fab fa-html5 icon-tech"></i></a>
-                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
-                            <a><i class="fab fa-aws icon-tech"></i></a>
+                            <a><i title='JavaScript' class="fab fa-js icon-tech"></i></a>
+                            <a><i title='Node.js' class="fab fa-node-js icon-tech"></i></a>
+                            <a><i title='HTML5' class="fab fa-html5 icon-tech"></i></a>
+                            <a><i title='CSS3' class="fab fa-css3-alt icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -69,20 +70,17 @@
         </div>
         <div class='div div-sv'>
             <span class=project-span>
-                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>Silicon Valley, The Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github gh-sv'><i class='fab fa-github'></i></a>
+                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' class='card-title' target=blank>Silicon Valley, The Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github'><i class='fab fa-github'></i></a>
             </span>
-            <a href='https://wikispeaks.herokuapp.com/' target=blank>
+            <a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>
                 <div class='each-website'>
                     <img src="https://i.imgur.com/ygFRfKp.png?1" class='website-image' alt='screenshot of website'/>
                     <div class='overlay'>
-                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <p class=line-margin-bottom>A responsive and accessible multiple-choice quiz to test knowledge around some of the HBO show's funniest moments.</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js icon-tech"></i></a>
-                            <a><i class="fab fa-html5 icon-tech"></i></a>
-                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
-                            <a><i class="fab fa-aws icon-tech"></i></a>
+                            <a><i title='JavaScript' class="fab fa-js icon-tech"></i></a>
+                            <a><i title='HTML5' class="fab fa-html5 icon-tech"></i></a>
+                            <a><i title='CSS3' class="fab fa-css3-alt icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
@@ -90,20 +88,21 @@
         </div>
         <div class='div div-ref'>
             <span class=project-span>
-                <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class='icon-github gh-ref'><i class='fab fa-github'></i></a>
+                <h2><a href='https://referred-app.herokuapp.com/' target=blank>Referred</a></h2><a href='https://github.com/jennifer/referred-client' target=blank class='icon-github'><i class='fab fa-github'></i></a>
             </span>
             <a href='https://wikispeaks.herokuapp.com/' target=blank>
                 <div class='each-website'>
                     <img src="https://i.imgur.com/JY1LZPT.jpg" class='website-image' alt='screenshot of website'/>
                     <div class='overlay'>
-                        <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
-                        <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <p class=line-margin-bottom>A fullstack app that lets job-seekers add companies and professional contacts, and track networking milestones.</p>
+                        <p class=line-margin-bottom>Frontend client uses React for UI, CSS Grid to display users’ network dashboard, and Flexbox for responsive layout.</p>
+                        <p class=line-margin-bottom>Node.js backend serves a REST API to store and manage user data.</p>
                         <span class=icon-span>
-                            <a><i class="fab fa-js icon-tech"></i></a>
-                            <a><i class="fab fa-html5 icon-tech"></i></a>
-                            <a><i class="fab fa-css3-alt icon-tech"></i></a>
-                            <a><i class="fab fa-aws icon-tech"></i></a>
+                            <a><i title='JavaScript' class="fab fa-js icon-tech"></i></a>
+                            <a><i title='React' class="fab fa-react icon-tech"></i></a>
+                            <a><i title='Node.js' class="fab fa-node-js icon-tech"></i></a>
+                            <a><i title='HTML5' class="fab fa-html5 icon-tech"></i></a>
+                            <a><i title='CSS3' class="fab fa-css3-alt icon-tech"></i></a>
                         </span>
                     </div>
                 </div>
