Build mobile project cards

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class=bio>
-            <h1>Hi, I'm Jennifer!</h1>
+            <h1>Hi, I'm Jennifer</h1>
             <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
                 I do JavaScript, Node.js, and React, to name a few. 
                 I like creative solutions to complex problems and inspired implementations for everyday tools. 
