add media queries

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class='div div-sv'>
             <span class=project-span>
-                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' class='card-title' target=blank>Silicon Valley, The Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github'><i class='fab fa-github'></i></a>
+                <h2><a href='https://jennifer.github.io/silicon-valley-quiz/' class='card-title' target=blank>Silicon Valley Quiz</a></h2><a href='https://github.com/jennifer/silicon-valley-quiz' target=blank class='icon-github'><i class='fab fa-github'></i></a>
             </span>
             <a href='https://jennifer.github.io/silicon-valley-quiz/' target=blank>
                 <div class='each-website'>
@@ -119,12 +119,15 @@
             </a>
         </div>
         <div class='div div-pic'>
-            <span class=project-span>
-                <a href='https://github.com/jennifer' target=blank class='icon-github gh-pic'><i class='fab fa-github'></i></a>
-            </span>
             <a href='https://github.com/jennifer' target=blank>
+                <span class=project-span>
+                    <i class='fab fa-github icon-github'></i>
+                </span>
                 <div class='each-website'>
-                    <img src="https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png" class='website-image' alt='screenshot of website'/>
+                    <img src="https://i.imgur.com/dsNvNIK.jpg?3./images/hello.png" class='website-image' alt="Jennifer's headshot"/>
+                </div>
+                <div class='overlay'>
+                    <span src='./hello.png' ></span>
                 </div>
             </a>
         </div>
