--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <main>
         <div class=bio>
-            <h1>Hi, I'm Jennifer</h1>
+            <span>
+                <img src='./hello.png' class='hello' alt='Waving hello emoji'/><h1 class=card-title>Hi, I'm Jennifer</h1>
+            </span>
             <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
                 I do JavaScript, Node.js, and React, to name a few. 
                 I like creative solutions to complex problems and inspired implementations for everyday tools. 
@@ -53,7 +55,7 @@
             </span>
             <a href='https://website-gallery.herokuapp.com/' target=blank>
                 <div class=each-website>
-                    <img src='https://i.imgur.com/sct6tEh.jpg' class=website-image alt='Gallery screenshot/>
+                    <img src='https://i.imgur.com/sct6tEh.jpg' class=website-image alt='Gallery screenshot'/>
                     <div class=overlay>
                         <p class=line-margin-bottom>A fullstack app that lets users collect, tag, and filter websites for design inspiration.</p>
                         <p class=line-margin-bottom>Utilizes Webshot and Cloudinary to automatically take a screenshot and display it in an image gallery.</p>
@@ -120,7 +122,7 @@
         </div>
         <div class='div div-pic'>
             <a href='https://github.com/jennifer' target=blank>
-                <span class=project-span>
+                <span class='project-span hello-span'>
                     <i class='fab fa-github icon-github'></i>
                 </span>
                 <div class=each-website>
