Update photo display and add DB icons

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <img src='./hello.png' class='hello' alt='Waving hello emoji'/><h1 class=card-title>Hi, I'm Jennifer</h1>
             </span>
             <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
-                I do JavaScript, Node.js, and React, to name a few. 
-                I like creative solutions to complex problems and inspired implementations for everyday tools. 
-                I’m relentlessly curious, continuously improving, and I strive to be a good steward for all users. 
-                Forever learning.
+                I work with JavaScript, Node.js, and React. 
+                I'm inspired by creative solutions to complex problems and inspired implementations for everyday tools. 
+                I value relentless curiosity and continuous improvement, and I strive to be a good steward for all users. 
+                Always learning.
             </p>
             <span class=icon-span>
                 <a href='https://github.com/jennifer' target=blank><i class='fab fa-github'></i></a>
@@ -37,13 +37,13 @@
                     <div class=overlay>
                         <p class=line-margin-bottom>A full-stack app enabling users to search for Wikipedia articles, view images, and listen to content read aloud.</p>
                         <p class=line-margin-bottom>Pulls article data from Wikipedia’s API and instantly streams audio to the user through Polly, Amazon’s text-to-speech AI service.</p>
-                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout</p>
+                        <p class=line-margin-bottom>Uses CSS Flexbox for responsive layout.</p>
                         <span class=icon-span>
                             <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                            <a><i title='Node.js' class='fab fa-node-js icon-tech'></i></a>
+                            <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                            <a><i title='Amazon Polly' class='fab fa-aws icon-tech'></i></a>
                             <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
                             <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
-                            <a><i title='Amazon Polly' class='fab fa-aws icon-tech'></i></a>
                         </span>
                     </div>
                 </div>
@@ -62,7 +62,8 @@
                         <p class=line-margin-bottom>Uses Node.js for backend CRUD operations, and CSS Grid and Flexbox for responsive layout.</p>
                         <span class=icon-span>
                             <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
-                            <a><i title='Node.js' class='fab fa-node-js icon-tech'></i></a>
+                            <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                            <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
                             <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
                             <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
                         </span>
@@ -102,7 +103,8 @@
                         <span class=icon-span>
                             <a><i title='JavaScript' class='fab fa-js icon-tech'></i></a>
                             <a><i title='React' class='fab fa-react icon-tech'></i></a>
-                            <a><i title='Node.js' class='fab fa-node-js icon-tech'></i></a>
+                            <a><i title='Node.js' class='fab fa-node icon-tech'></i></a>
+                            <a><i title='mongoDB' class='fas fa-database icon-tech'></i></a>
                             <a><i title='HTML5' class='fab fa-html5 icon-tech'></i></a>
                             <a><i title='CSS3' class='fab fa-css3-alt icon-tech'></i></a>
                         </span>
