--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class=bio>
             <span>
-                <img src='./hello.png' class='hello' alt='Waving hello emoji'/><h1 class=card-title>Hi, I'm Jennifer</h1>
+                <h1 class=card-title>Hi, I'm Jennifer</h1><img src='./hello.png' class='hello' alt='Waving hello emoji'/>
             </span>
             <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
                 I work with JavaScript, Node.js, and React. 
