--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href='styles.css' rel='stylesheet' type='text/css' />
     <link href='https://fonts.googleapis.com/css?family=Niramit' rel='stylesheet'>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main>
