--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </span>
             <p class='line-margin-bottom line-margin-top'>I’m a fullstack developer in Boulder, CO. 
                 I work with JavaScript, Node.js, and React. 
-                I'm inspired by creative solutions to complex problems and inspired implementations for everyday tools. 
+                I'm inspired by clever solutions to complex problems and creative implementations for everyday tools. 
                 I value relentless curiosity and continuous improvement, and I strive to be a good steward for all users. 
                 Always learning.
             </p>
